--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,21 @@
 <h3> Joshi </h3>
 <table border="1">
-	<tr>
-		<td colspan="2">
-			<app-header></app-header>
-
-		</td>
-	</tr>
+    <tr>
+        <td colspan="2">
+            <app-header></app-header>
+        </td>
+    </tr>
+    <tr>
+        <td> <app-work></app-work> </td>
+        <td> <app-skills></app-skills> </td>
+    </tr>
+    <tr>
+        <td> <experience></experience> </td>
+        <td> <app-certificates></app-certificates> </td>
+    </tr>
+    <tr>
+        <td> <app-lenguages></app-lenguages> </td>
+        <td> <app-interests></app-interests> </td>
+    </tr>
 </table>
+
